--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -143,6 +143,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ClimbUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="DropDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="TurnOn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=L)
++ActionMappings=(ActionName="Treat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
++ActionMappings=(ActionName="Treat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="CheckingBackwardTurn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="CheckingBackwardTurn",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="ChargeSpotLight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
